# trans-vr

./: .clang-format  .gitmodules  BUILD_QT6.md  CMakeLists.txt  CMakeLists.txt.qt6  INSTALL  QT6_MIGRATION_PLAN.md  README  README.md  TO_REMOVE.txt
src/: CMakeLists.txt
src/ByteOrder/: ByteSwapping.cpp  CMakeLists.txt
src/CVC/: App.cpp  CMakeLists.txt  HDF5_Utilities.cpp  State.cpp
src/ColorTable2/: CMakeLists.txt  ColorTable.cpp  InfoDialog.cpp  Table.cpp  XoomedOut.cpp
src/CompServ/: CMakeLists.txt  CompServ.cpp  CompServ.pro
src/Contour/: CMakeLists.txt  CellQueue.cpp  CellSearch.cpp  bucketsearch.cpp  compute.cpp  conplot.cpp  conplot2d.cpp  conplot3d.cpp  conplot_p.cpp  conplotreg2.cpp  conplotreg3.cpp  contour.cpp  contour2d.cpp  contour3d.cpp  cubes.cpp  data.cpp  datareg2.cpp  datareg3.cpp  datasetslc.cpp  datasetvol.cpp  dataslc.cpp  datavol.cpp  dict.cpp  dirseeds.cpp  dirseedsreg2.cpp  edgehash.cpp  endian_io.cpp  hash.cpp  inttree.cpp  ipqueue.cpp  iqueue.cpp  queue.cpp  range.cpp  rangeprop.cpp  rangesweep.cpp  regprop.cpp  regprop2.cpp  respprop2.cpp  seedall.cpp  seedcells.cpp  (+5 more)
src/ContourFilter/: CMakeLists.txt  container.cc  contour.cc  control_points.cc  controls.cc  histogram.cc  object.cc  parameter.cc  point.cc  reconstruct2contourtiler.cc  sim_anneal.cc
src/ContourTiler/: All_tiling_region.cpp  Boundary_slice_chords.cpp  CGAL_hash.cpp  CMakeLists.txt  Composite_tiling_region.cpp  Contour.cpp  Contour2.cpp  Correspondences.cpp  Hierarchy.cpp  Point_25.cpp  Point_tiling_region.cpp  Polyline.cpp  README  Slice.cpp  Slice2.cpp  Tiler_workspace.cpp  Tiles.cpp  Tiling_region.cpp  Wedge.cpp  Z_adjustments.cpp  arrange_polygons.cpp  augment.cpp  cl_options.cpp  contour_graph.cpp  contour_near_main.cpp  contour_utils.cpp  cut.cpp  decimate.cpp  dev.cpp  ecs.cpp  ecs_main.cpp  interp.cpp  intersection.cpp  main.cpp  minkowski.cpp  mtiler_operations.cpp  offset_polygon.cpp  perturb.cpp  polygon_difference.cpp  polygon_intersection.cpp  (+27 more)
src/Curation/: CMakeLists.txt  Curation.pro  am.cpp  curat.cpp  handle.cpp  hfn_util.cpp  init.cpp  intersect.cpp  main.cpp  mesh_io.cpp  op.cpp  robust_cc.cpp  smax.cpp  tcocone.cpp  util.cpp
src/FastContouring/: CMakeLists.txt  ContourGeometry.cpp  FastContouring.cpp  FastContouring.pro  MarchingCubesBuffers.cpp  Matrix.cpp  Quaternion.cpp  Ray.cpp  Tuple.cpp  Vector.cpp
src/GeometryRenderer/: BoundingBoxClip.cpp  CMakeLists.txt  GeometryRenderer.cpp  SceneLight.cpp
src/HLevelSet/: CMakeLists.txt  HLevelSet.cpp.unused  HLevelSet.pro  HLevelSet2.c  HLevelSet_Gauss.cpp.unused  HLevelSet_Gauss_old.cpp.unused  HLevelSet_Recon.cpp.unused  HLevelSet_Recon2.cpp  HLevelSet_Recon2_old.cpp.unused  HLevelSet_SES.cpp  HLevelSet_Vinay.cpp.unused  levelset_2_June5.cpp
src/HigherOrderSegmentation/: CMakeLists.txt  higherorderseg.cu
src/Histogram/: CMakeLists.txt  Histogram.pro  glcontrolwidget.cpp  histogram.cpp  histogram_data.cpp
src/LBIE/: CMakeLists.txt  LBIE_Mesher.cpp  LBIE_geoframe.cpp  e_face.cpp  hexa.cpp  libLBIE.pro  main.cpp  normalspline.cpp  octree.cpp  pcio.cpp  quality_improve.cpp  test.cpp.unused  tetra.cpp
src/MMHLS/: CMakeLists.txt  Notes.txt
src/MSLevelSet/: CMakeLists.txt  levelset3D.cu
src/MultiphaseSegmentation/: CMakeLists.txt  multiphaseseg.cu
src/PEDetection/: CC_Geom.cpp  CMakeLists.txt  Control.cpp  CriticalPoints.cpp  EM.cpp  Evaluation.cpp  FrontPlane.cpp  GVF.cpp  Geometric.cpp  HowToRun.txt  Initialization.cpp  MC_Geom.cpp  MC_Geom_Octree.cpp  MarchingCubes.cpp  MarchingCubes2nd.cpp  MembraneSeg.cpp  Octree.cpp  OctreeCell.cpp  PEDetection.cpp  PEDetection.pro  README  README2  STree.cpp  Skeleton.cpp  Skeleton.cpp.backup  Skeleton_Org.cpp  Skeleton_SeedPts.cpp  Stack.cpp  TFGeneration.cpp  Thinning.cpp  VesselSeg.cpp  VesselSeg2D_backup3.cpp  VesselSeg2D_backup4.cpp  VesselSeg_backup.cpp  VesselSeg_backup2.cpp  VesselSeg_backup3.cpp  VesselSeg_backup4.cpp  main.cpp
src/PocketTunnel/: CMakeLists.txt  PocketTunnel.pro  handle.cpp  hfn_util.cpp  init.cpp  intersect.cpp  main.cpp.unused  op.cpp  pocket_tunnel.cpp  rcocone.cpp  robust_cc.cpp  smax.cpp  tcocone.cpp  util.cpp
src/QGLViewer/: CMakeLists.txt  camera.cpp  constraint.cpp  frame.cpp  keyFrameInterpolator.cpp  manipulatedCameraFrame.cpp  manipulatedFrame.cpp  mouseGrabber.cpp  qglviewer.cpp  quaternion.cpp  saveSnapshot.cpp  vec.cpp
src/RawIVEditor/: CMakeLists.txt  README  RawIVEditor.pro  main.cpp  rawiveditordialog.cpp  rawiveditordialogbase.ui
src/Reconstruction/: B_spline.cpp  CMakeLists.txt  Reconstruction.cpp  utilities.cpp
src/SecondaryStructures/: CMakeLists.txt  degen.cpp  helix.cpp  helix.cpp.back  hfn_util.cpp  init.cpp  intersect.cpp  medax.cpp  op.cpp  rcocone.cpp  robust_cc.cpp  skel.cpp  skel.cpp.back  tcocone.cpp  u1.cpp  u2.cpp  util.cpp  util.cpp.junk
src/Segmentation/: CMakeLists.txt  Segmentation.pro
src/SignDistanceFunction/: CMakeLists.txt  SignDistanceFunction.pro  common.cpp  compute.cpp  head.cpp  init.cpp  main.cpp  new_adjust.cpp  octree.cpp  propagate.cpp
src/SimpleExample/: CMakeLists.txt  SimpleExample.cpp  SimpleExample.pro  colormap.map  vh4.rawiv
src/Skeletonization/: CMakeLists.txt  PolyTess.cpp  Skeletonization.cpp  Skeletonization.pro  degen.cpp  graph.cpp  hfn_util.cpp  init.cpp  intersect.cpp  main.cpp.unused  medax.cpp  op.cpp  rcocone.cpp  robust_cc.cpp  skel.cpp  tcocone.cpp  u1.cpp  u2.cpp  util.cpp
src/Socket/: CMakeLists.txt  CVCSocket.cpp
src/SuperSecondaryStructures/: CMakeLists.txt  cmake_install.cmake  hfn_util.cpp  init.cpp  intersect.cpp  main.cpp.unused  medax.cpp  op.cpp  rcocone.cpp  robust_cc.cpp  segment.cpp.unused  smax.cpp  supersecondary_structures.cpp  tcocone.cpp  util.cpp
src/SweetLBIE/: CMakeLists.txt  meshGeneration.cpp  octree.cpp
src/SweetMesh/: CMakeLists.txt  hexahedron.cpp  hexmesh.cpp  hexmeshtest.cpp  main.cpp  meshIO.cpp  meshTools.cpp  quad.cpp  tetrahedra.cpp  triangle.cpp  vertex.cpp  volRoverDisplay.cpp
src/TightCocone/: CCVseg.cpp.unused  CMakeLists.txt  GVF.cpp  README  TightCocone.pro  init.cpp  inout.cpp  main.cpp.unused  op.cpp  (+7 more)
(+1695 files in other folders)
