cmake_minimum_required(VERSION 3.16)

FILE(GLOB SOURCE_FILES *.cpp *.c)
FILE(GLOB INCLUDE_FILES ../../inc/Contour/*.[Hh])

SOURCE_GROUP("Source Files" FILES ${SOURCE_FILES})
SOURCE_GROUP("Header Files" FILES ${INCLUDE_FILES})

INCLUDE_DIRECTORIES(
  ../../inc
)

ADD_DEFINITIONS (-fpermissive -D_BOOL -DSP2 -DUSEDICT -DNDEBUG)
IF(WIN32)
  ADD_DEFINITIONS(-DWIN32)
ENDIF(WIN32)
IF(APPLE)
  ADD_DEFINITIONS(-DMACOS_X)
ENDIF(APPLE)

ADD_LIBRARY (Contour STATIC ${SOURCE_FILES} ${INCLUDE_FILES})

set_target_properties(Contour PROPERTIES
  AUTOMOC OFF
  AUTOUIC OFF
  AUTORCC OFF
)

target_link_libraries(Contour Utility)
